CLIENT-255: fix bugs after testing
 - Touch movement bug,
 - Layout bug.

--- a/src/modules/ui/directives/draggable/draggable.less
+++ b/src/modules/ui/directives/draggable/draggable.less
@@ -16,3 +16,11 @@
     top: 0;
   }
 }
+
+@media screen and (max-width: 768px) and (min-width: 481px) {
+  w-create-order.drag {
+    &-element {
+      left: 49px;
+    }
+  }
+}
